// Vitest Snapshot v1

exports[`use-ripple > should expand on click and match the client events 1`] = `
{
  "--ripple-height": "50px",
  "--ripple-opacity": "0.2",
  "--ripple-pos-x": "100px",
  "--ripple-pos-y": "100px",
  "--ripple-scale": "4.4",
  "--ripple-width": "50px",
  "--transition-property": "transform",
}
`;

exports[`use-ripple > should match default values 1`] = `
{
  "--ripple-height": "40px",
  "--ripple-opacity": "0",
  "--ripple-pos-x": "0px",
  "--ripple-pos-y": "0px",
  "--ripple-scale": "1",
  "--ripple-width": "40px",
  "--transition-property": "transform",
}
`;

exports[`use-ripple > should revet to default button size 1`] = `
{
  "--ripple-height": "50px",
  "--ripple-opacity": "0",
  "--ripple-pos-x": "0px",
  "--ripple-pos-y": "0px",
  "--ripple-scale": "1",
  "--ripple-width": "50px",
  "--transition-property": "opacity",
}
`;
